--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
     <meta name="theme-color" content="red">
     <title>Photo Browse</title>
-    <link href="css/app.css" rel="stylesheet">
-    <script defer src="bower_components/alameda/alameda.js"></script>
-    <script defer src="js/app.js"></script>
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
+    <link rel="stylesheet" href="bower_components/gaia-icons/gaia-icons-embedded.css">
+    <!-- <script src="bower_components/alameda/alameda.js" data-main="config"></script> -->
   </head>
-  <body>
-    <section id="main"></section>
+  <body class="theme-media">
+  <gaia-header>
+    <h1></h1>
+  </gaia-header>
+  <div class="app-content">
+    <little-browser></little-browser>
+  </div>
+
+  <script src="bower_components/gaia-component/gaia-component.js"></script>
+  <script src="bower_components/threads/threads.js"></script>
+  <script src="bower_components/little-browser/lib/little-browser.js"></script>
+  <script src="bower_components/font-fit/font-fit.js"></script>
+  <script src="bower_components/gaia-header/gaia-header.js"></script>
+  <script src="js/threads-manager.js"></script>
+  <script src="js/app.js"></script>
   </body>
 </html>
