--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
     <link rel="stylesheet" href="bower_components/gaia-icons/gaia-icons-embedded.css">
-    <!-- <script src="bower_components/alameda/alameda.js" data-main="config"></script> -->
   </head>
   <body class="theme-media">
-  <gaia-header>
-    <h1></h1>
-  </gaia-header>
-  <div class="app-content">
-    <little-browser></little-browser>
-  </div>
+    <gaia-header>
+      <h1></h1>
+    </gaia-header>
 
-  <script src="bower_components/gaia-component/gaia-component.js"></script>
-  <script src="bower_components/threads/threads.js"></script>
-  <script src="bower_components/little-browser/lib/little-browser.js"></script>
-  <script src="bower_components/font-fit/font-fit.js"></script>
-  <script src="bower_components/gaia-header/gaia-header.js"></script>
-  <script src="js/threads-manager.js"></script>
-  <script src="js/app.js"></script>
+    <div class="app-content">
+      <little-browser></little-browser>
+    </div>
+
+    <!-- loading scripts sync for fast load -->
+    <script src="bower_components/gaia-component/gaia-component.js"></script>
+    <script src="bower_components/threads/threads.js"></script>
+    <script src="bower_components/little-browser/lib/little-browser.js"></script>
+    <script src="bower_components/font-fit/font-fit.js"></script>
+    <script src="bower_components/gaia-header/gaia-header.js"></script>
+    <script src="js/threads-manager.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
